--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,6 +150,7 @@ nav:
       #- Architecture: node/architecture.md
       - Distributed Signatures: node/sigs.md
       - Test-net: dev/start/testnet.md
+    - Modes of Operation: node/modes.md
     - Light Modes: 
       - Digest State: node/digest-state.md
       - History Pruning: node/history-pruning.md
