--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,22 +140,24 @@ nav:
       #- Mac: node/install/mac.md
       #- Windows: node/install/windows.md
       #- Linux: node/install/linux.md
-      #- Pi: node/install/pi.md
+      - Troubleshooting: node/install/troubleshooting.md
       - Docker: node/install/docker.md
-      - Troubleshooting: node/install/troubleshooting.md 
+      - Pi: node/install/pi.md
+      
       #- Tutorial: node/install/tutorial.md
-    - Overview: 
+    - Overview:
       - Wallet: node/wallet.md
       - Swagger API: node/swagger.md
+      - FAQ: node/install/faq.md
       #- Architecture: node/architecture.md
       - Distributed Signatures: node/sigs.md
       - Test-net: dev/start/testnet.md
-    - Modes of Operation: node/modes.md
-    - Light Modes: 
-      - Digest State: node/digest-state.md
-      - History Pruning: node/history-pruning.md
-      - Snapshots: node/snapshots.md
-      - NiPoPoWS: dev/protocol/nipopow.md
+      - Modes of Operation: node/modes.md
+    #- Light Modes: 
+    #  - Digest State: node/digest-state.md
+    #  - History Pruning: node/history-pruning.md
+    #  - Snapshots: node/snapshots.md
+   #   - NiPoPoWS: dev/protocol/nipopow.md
   - 💡 ┃  Applications:
     - Applications: uses/index.md
     - Live dApps:
