--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,9 @@ theme:
 extra_css: [assets/extra.css]
 extra_javascript:
   - assets/extra.js
+  - assets/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 
 extra:
@@ -53,6 +56,9 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.arithmatex:
+      generic: true
+
 
 nav:
   - Getting Started:
@@ -64,12 +70,11 @@ nav:
       - ERGOHACK: events/ergohack.md
       - ErgoSummit: events/ergosummit.md
     - Documents: documents.md
+    - Social Contract: social_contract.md
   - 🔬 ┃ Learn: 
     - Protocol: dev/protocol/index.md
     - Components: 
       - eUTXO: dev/protocol/eutxo.md
-      - Autolykos: dev/protocol/autolykos.md
-      - Storage Rent: dev/protocol/rent.md
       - NIPoPoWS: dev/protocol/nipopow.md
     - Scaling: dev/protocol/scaling.md
     - EIPs: dev/protocol/eip.md
@@ -133,6 +138,15 @@ nav:
         - Bookmarks: dev/start/resources.md
         - Audit: dev/protocol/audit.md
         - EIP27: dev/protocol/eip27.md
+  - ⛏ ┃  Mining:
+    - Mining: mining/index.md
+    - Dig in: 
+      - Join a Pool: mining/setup/join.md
+      - Solo Mining: mining/setup/solo.md
+      - Host a Pool: mining/setup/pool.md
+    - Autolykos: mining/autolykos.md
+    - Governance: mining/governance.md
+    - Storage Rent: mining/rent.md
   - 📦 ┃  Node:
     - Node: node/index.md
     - Install: 
