--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,7 @@ nav:
     - eUTXO:
       - Overview: dev/protocol/eutxo/eutxo.md
       - ELI5: dev/protocol/eutxo/accountveutxo.md
+      - Atomic Swaps: dev/protocol/eutxo/atomic.md
     - NIPoPoWS: dev/protocol/nipopow.md
     - Sigma Protocols: dev/scs/sigma.md
   - ⛏ ┃  Mine:
