--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,6 +155,7 @@ nav:
         - Overview: dev/scs/ergoscript.md
         - Quick Primer: dev/scs/ergoscript-primer.md
         - Sigma Language: dev/scs/sigma-lang.md
+        - Debugging: dev/scs/debugging.md
       - Features: 
         - Sigma Protocols: dev/scs/sigma.md
         - Data Inputs: dev/scs/data-inputs.md
